# openg2p-socialregistry-community-addons

./: NOTICE  README.md  pyproject.toml  requirements.txt
fastapi/: __manifest__.py
