[project]
name = "odoo-addons-openg2p-social-registry-community-addons"
version = "0.0.0"
dependencies = [
    "odoo-addon-component @ {root:uri}/component",
    "odoo-addon-endpoint_route_handler @ {root:uri}/endpoint_route_handler",
    "odoo-addon-extendable @ {root:uri}/extendable",
    "odoo-addon-extendable_fastapi @ {root:uri}/extendable_fastapi",
    "odoo-addon-fastapi @ {root:uri}/fastapi",
    "odoo-addon-graphql_base @ {root:uri}/graphql_base",
    "odoo-addon-graphql_demo @ {root:uri}/graphql_demo",
    "odoo-addon-queue_job @ {root:uri}/queue_job",
    "odoo-addon-server_environment @ {root:uri}/server_environment",
    "odoo-addon-smile_audit @ {root:uri}/smile_audit",
    "odoo-addon-storage_backend @ {root:uri}/storage_backend",
    "odoo-addon-storage_backend_s3 @ {root:uri}/storage_backend_s3",
    "odoo-addon-storage_file @ {root:uri}/storage_file",
    "odoo-addon-muk_product @ {root:uri}/muk_product",
    "odoo-addon-muk_web_appsbar @ {root:uri}/muk_web_appsbar",
    "odoo-addon-muk_web_chatter @ {root:uri}/muk_web_chatter",
    "odoo-addon-muk_web_colors @ {root:uri}/muk_web_colors",
    "odoo-addon-muk_web_dialog @ {root:uri}/muk_web_dialog",
    "odoo-addon-muk_web_enterprise_theme @ {root:uri}/muk_web_enterprise_theme",
    "odoo-addon-muk_web_theme @ {root:uri}/muk_web_theme",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
